k8s/issuance-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuance-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: issuance
  template:
    metadata:
      labels:
        app: issuance
    spec:
      containers:
        - name: issuance
          image: issuance-service:latest
          ports:
            - containerPort: 3001
