k8s/issuance-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: issuance-service
spec:
  selector:
    app: issuance
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
