k8s/verification-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: verification-service
spec:
  selector:
    app: verification
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
